# ewsdb

./: .gitignore  README.md  docker-compose.yml  nginx_80.conf  pyproject.toml
backend/: Dockerfile  manage.py  requirements.txt
backend/ewsdb/: asgi.py  settings.py  urls.py  utils.py  views.py  wsgi.py
backend/instruction/: models.py  serializers.py  urls.py  views.py
backend/prevdata/: apps.py  models.py  serializers.py  views.py
backend/simulator/: models.py  serializers.py  views.py
backend/staticfiles/css/: react_ui.css
backend/staticfiles/js/: react_ui.js
backend/templates/: base.html  css.html
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js  Store.js  Utils.js  index.js
frontend/src/app/: Instruction.js  ServerInfo.js  Simulator.js
frontend/src/auth/: Login.js  Logout.js
frontend/src/components/: HomeUI.js  Navbar.js
frontend/src/markdown/: MarkdownCreator.js  MarkdownEditor.js  MarkdownInput.js  MarkdownResult.js  MarkdownUpdater.js  MarkdownViewer.js  markdown-editor.css  markedInput.jsx  results.jsx
frontend/src/views/app/: Instruction.js  ServerInfo.js  Simulator.js
frontend/src/views/auth/: Login.js  Logout.js
nginx/: nginx_80.example
scripts/: migration.sh
static/js/: react_ui.js
