[tool.poetry]
name = "ewsdb"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
asgiref = "3.4.1"
backports-zoneinfo = "0.2.1"
dj-rest-auth = "2.2.1"
django = "4.0"
django-cors-headers = "3.10.1"
django-environ = "0.8.1"
djangorestframework = "3.13.1"
mysqlclient = "2.1.0"
psutil = "5.9.0"
pytz = "2021.3"
sqlparse = "0.4.2"
tzdata = "2021.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
